# chat_app

./: .clang-format  CMakeLists.txt
client/: CMakeLists.txt
client/include/client/: basic_client_file_transfer_handler.h  client.h  iclient_file_transfer_handler.h
client/src/: basic_client_file_transfer_handler.cc  client.cc  main.cc
common/: CMakeLists.txt
common/include/common/: error_codes.h  isocket.h  logger.h  message.h  message_serialization.h  socket_factory.h
common/src/: error_codes.cc  message_serialization.cc  posix_socket.cc  socket_factory.cc  winsock_socket.cc
server/: CMakeLists.txt
server/include/server/: broadcast_message_handler.h  client_handler.h  imessage_handler.h  server.h
server/src/: broadcast_message_handler.cc  client_handler.cc  main.cc  server.cc
